name: jahti
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Henry Heikkinen
maintainer: rce@rce.fi
build-type: Simple
cabal-version: >=1.10

executable jahti
  main-is: Main.hs
  other-modules: Jahti, Adb
  build-depends: base >=4.7 && <4.8, containers, process
  hs-source-dirs: src
  default-language: Haskell2010
 
